chore: exclude bukkit-slf4j from code coverage

--- a/src/bukkit/bukkit-slf4j/pom.xml
+++ b/src/bukkit/bukkit-slf4j/pom.xml
@@ -46,4 +46,16 @@
       <artifactId>slf4j-api</artifactId>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
