--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,6 @@
     <version.slf4j>2.0.6</version.slf4j>
 
     <!-- ==================== Test Dependencies versions ==================== -->
-    <version.junit>5.9.2</version.junit>
     <version.mockito>5.2.0</version.mockito>
   </properties>
 
@@ -107,6 +106,13 @@
         <artifactId>jakarta.jakartaee-bom</artifactId>
         <!-- JEE v10+ requires JDK 11: don't bump it! -->
         <version>9.1.0</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.junit</groupId>
+        <artifactId>junit-bom</artifactId>
+        <version>5.9.2</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -215,16 +221,6 @@
         <groupId>org.jboss.logging</groupId>
         <artifactId>jboss-logging-processor</artifactId>
         <version>2.2.1.Final</version>
-      </dependency>
-      <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter-api</artifactId>
-        <version>${version.junit}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter-params</artifactId>
-        <version>${version.junit}</version>
       </dependency>
       <dependency>
         <groupId>org.mockito</groupId>
