test: exclude Lombok generated methods from code coverage

--- a/lombok.config
+++ b/lombok.config
@@ -1,2 +1,8 @@
 # Lombok configurations
-config.stopbubbling = true
+# Properties documented here: https://projectlombok.org/features/configuration
+
+# Enforce that only this config file must apply
+config.stopBubbling = true
+
+# We want to exclude Lombok generated code from code coverage
+lombok.addLombokGeneratedAnnotation = true
