--- a/pom.xml
+++ b/pom.xml
@@ -258,6 +258,11 @@
         <version>${version.configurate}</version>
       </dependency>
       <dependency>
+        <groupId>org.threeten</groupId>
+        <artifactId>threeten-extra</artifactId>
+        <version>1.7.2</version>
+      </dependency>
+      <dependency>
         <groupId>org.xerial</groupId>
         <artifactId>sqlite-jdbc</artifactId>
         <version>3.41.0.1</version>
