refactor: extract bukkit-slf4j module into a dedicated repository

--- a/pom.xml
+++ b/pom.xml
@@ -63,16 +63,8 @@
   </issueManagement>
 
   <ciManagement>
-    <url>https://app.circleci.com/pipelines/github/Djaytan/mc-jobs-reborn-patch-place-break</url>
+    <url>https://github.com/Djaytan/mc-jobs-reborn-patch-place-break/actions</url>
   </ciManagement>
-
-  <distributionManagement>
-    <repository>
-      <id>github</id>
-      <name>GitHub Packages</name>
-      <url>https://maven.pkg.github.com/djaytan/mc-jobs-reborn-patch-place-break</url>
-    </repository>
-  </distributionManagement>
 
   <properties>
     <!-- ==================== General ==================== -->
