--- a/pom.xml
+++ b/pom.xml
@@ -412,8 +412,9 @@
                 <exclude>src/test/resources/**</exclude>
                 <exclude>**/dir.empty</exclude>
                 <exclude>.editorconfig</exclude>
-                <exclude>renovate.json5</exclude>
+                <exclude>jitpack.yml</exclude>
                 <exclude>lombok.config</exclude>
+                <exclude>renovate.json5</exclude>
               </excludes>
             </licenseSet>
           </licenseSets>
