refactor: reorganize storage-sql module add tests for ConnectionPool class

--- a/src/patch-place-break/patch-place-break-core/pom.xml
+++ b/src/patch-place-break/patch-place-break-core/pom.xml
@@ -47,6 +47,10 @@
       <artifactId>guice</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.zaxxer</groupId>
+      <artifactId>HikariCP</artifactId>
+    </dependency>
+    <dependency>
       <groupId>fr.djaytan.minecraft.jobsreborn.patchplacebreak</groupId>
       <artifactId>patch-place-break-api</artifactId>
       <version>${project.version}</version>
