--- a/src/bukkit/bukkit-plugin/pom.xml
+++ b/src/bukkit/bukkit-plugin/pom.xml
@@ -124,30 +124,7 @@
       </resource>
     </resources>
     <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-clean-plugin</artifactId>
-        <executions>
-          <execution>
-            <!-- Prevent conflicts with already existing Jar file -->
-            <id>clean-uber-jar</id>
-            <goals>
-              <goal>clean</goal>
-            </goals>
-            <phase>initialize</phase>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <configuration>
-          <ignoredUnusedDeclaredDependencies combine.children="append">
-            <ignoredUnusedDeclaredDependency>com.mysql:mysql-connector-j</ignoredUnusedDeclaredDependency>
-            <ignoredUnusedDeclaredDependency>org.xerial:sqlite-jdbc</ignoredUnusedDeclaredDependency>
-          </ignoredUnusedDeclaredDependencies>
-        </configuration>
-      </plugin>
+      <?SORTPOM IGNORE?>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
@@ -257,6 +234,87 @@
             <phase>package</phase>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>com.github.wvengen</groupId>
+        <artifactId>proguard-maven-plugin</artifactId>
+        <version>2.6.0</version>
+        <configuration>
+          <attach>true</attach>
+          <includeDependency>true</includeDependency>
+          <exclusions>
+            <exclusion>
+              <groupId>com.github.Djaytan</groupId>
+              <artifactId>bukkit-slf4j</artifactId>
+            </exclusion>
+            <exclusion>
+              <groupId>fr.djaytan.minecraft.jobsreborn.patchplacebreak</groupId>
+              <artifactId>*</artifactId>
+            </exclusion>
+          </exclusions>
+          <libs>
+            <lib>${java.home}/jmods</lib>
+          </libs>
+          <options>
+            <option>-allowaccessmodification</option>
+            <option>-dontnote</option>
+            <option>-dontwarn</option>
+            <option>-keep class !fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.** { *; }</option>
+            <option>-keep class fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.com.google.inject.** { *; }</option>
+            <option>-keep class fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.jee.jakarta.validation.** { *; }</option>
+            <option>-keep class fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.org.hibernate.validator.** { *; }</option>
+            <option>-keep class fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.org.slf4j.** { *; }</option>
+            <option>-keep class fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.org.flywaydb.** { *; }</option>
+            <option>-keep class fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.com.zaxxer.hikari.HikariDataSource { *; }</option>
+            <option>-keep class fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.org.aopalliance.intercept.MethodInterceptor { *; }</option>
+            <option>-keep class fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.org.spongepowered.configurate.ConfigurationNode { *; }</option>
+            <option>-keepattributes Exceptions,InnerClasses,Signature,Deprecated,SourceFile,LineNumberTable,*Annotation*,EnclosingMethod</option>
+          </options>
+          <!-- Obfuscation forbidden by SpigotMC and Hangar when publishing plugin there -->
+          <obfuscate>false</obfuscate>
+        </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.17.1</version>
+            <scope>runtime</scope>
+          </dependency>
+        </dependencies>
+        <executions>
+          <execution>
+            <id>run-proguard</id>
+            <goals>
+              <goal>proguard</goal>
+            </goals>
+            <phase>package</phase>
+          </execution>
+        </executions>
+      </plugin>
+      <?SORTPOM RESUME?>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-clean-plugin</artifactId>
+        <executions>
+          <execution>
+            <!-- Prevent conflicts with already existing Jar file -->
+            <id>clean-uber-jar</id>
+            <goals>
+              <goal>clean</goal>
+            </goals>
+            <phase>initialize</phase>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <configuration>
+          <ignoredUnusedDeclaredDependencies combine.children="append">
+            <ignoredUnusedDeclaredDependency>com.mysql:mysql-connector-j</ignoredUnusedDeclaredDependency>
+            <ignoredUnusedDeclaredDependency>org.xerial:sqlite-jdbc</ignoredUnusedDeclaredDependency>
+          </ignoredUnusedDeclaredDependencies>
+        </configuration>
       </plugin>
     </plugins>
   </build>
