refactor: merge storage modules into patch-place-break-storage

--- a/src/patch-place-break/patch-place-break-config/pom.xml
+++ b/src/patch-place-break/patch-place-break-config/pom.xml
@@ -48,7 +48,7 @@
     </dependency>
     <dependency>
       <groupId>fr.djaytan.minecraft.jobsreborn.patchplacebreak</groupId>
-      <artifactId>storage-api</artifactId>
+      <artifactId>patch-place-break-storage</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
