--- a/src/patch-place-break/pom.xml
+++ b/src/patch-place-break/pom.xml
@@ -41,6 +41,7 @@
     <module>patch-place-break-api</module>
     <module>patch-place-break-config</module>
     <module>patch-place-break-core</module>
+    <module>patch-place-break-storage</module>
   </modules>
 
   <properties>
