--- a/src/bukkit/bukkit-plugin/pom.xml
+++ b/src/bukkit/bukkit-plugin/pom.xml
@@ -259,8 +259,8 @@
             <option>-allowaccessmodification</option>
             <option>-dontnote</option>
             <option>-dontwarn</option>
-            <option>-keep class !fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.** { *; }</option>
-            <option>-keep class fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.com.google.inject.** { *; }</option>
+            <option>-keep,allowoptimization class !fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.** { *; }</option>
+            <option>-keep,allowoptimization class fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.com.google.inject.** { *; }</option>
             <option>-keep class fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.jee.jakarta.validation.** { *; }</option>
             <option>-keep class fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.org.hibernate.validator.** { *; }</option>
             <option>-keep class fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.org.slf4j.** { *; }</option>
@@ -269,6 +269,7 @@
             <option>-keep class fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.org.aopalliance.intercept.MethodInterceptor { *; }</option>
             <option>-keep class fr.djaytan.minecraft.jobsreborn.patchplacebreak.lib.org.spongepowered.configurate.ConfigurationNode { *; }</option>
             <option>-keepattributes Exceptions,InnerClasses,Signature,Deprecated,SourceFile,LineNumberTable,*Annotation*,EnclosingMethod</option>
+            <option>-optimizationpasses 3</option>
           </options>
           <!-- Obfuscation forbidden by SpigotMC and Hangar when publishing plugin there -->
           <obfuscate>false</obfuscate>
