--- a/pom.xml
+++ b/pom.xml
@@ -274,6 +274,11 @@
         <version>${version.configurate}</version>
       </dependency>
       <dependency>
+        <groupId>org.awaitility</groupId>
+        <artifactId>awaitility</artifactId>
+        <version>4.2.0</version>
+      </dependency>
+      <dependency>
         <groupId>org.spongepowered</groupId>
         <artifactId>configurate-hocon</artifactId>
         <version>${version.configurate}</version>
